--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,9 +1,21 @@
-{% extends "core/base.html" %}
-
+{% extends 'core/base.html' %}
+{% load static %}
+{% block title %}Inicio{% endblock %}
 {% block content %}
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos unde vel ipsa enim quo corrupti sint labore sit, numquam aliquam consequatur alias ipsam impedit repellat rerum? Laboriosam natus sequi suscipit?
-Officiis, suscipit. Necessitatibus ex cumque delectus porro nobis aspernatur, consequatur voluptatum rerum tempore in? Obcaecati assumenda qui numquam amet. Magni mollitia amet architecto ipsum alias, beatae temporibus praesentium nesciunt itaque.
-Deserunt incidunt quod odio quidem architecto magnam harum odit? Accusamus adipisci voluptas asperiores voluptatum veritatis, ea culpa iure deserunt, quod alias mollitia aspernatur non temporibus illum eum officiis recusandae iusto!</p>
-
-{% endblock content %}
+<div class="container">
+    <div style="padding-top:50px; text-align:center;">
+    <h1>JEREM - LAND</h1>
+        <div class="row mt-5">
+            <div class="col-3"></div>
+            <div>
+                <ul >
+                    <li>CBV</li>
+                    <li>autenticación</li>
+                    <li>registros</li>
+                    <li>perfiles</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
