--- a/core/templates/core/includes/footer.html
+++ b/core/templates/core/includes/footer.html
@@ -1,1 +1,9 @@
-<h1> FOOTER </h1>
+<footer class="bg-dark">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+            <p class="copyright text-muted mt-5">Copyright &copy; 2020 · Jeremias Caceres (Desarrollador de Software & Profesor de desarrollo web) </p>
+            </div>
+        </div>
+    </div>
+</footer>
