--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -1,3 +1,6 @@
+main{
+    padding-top: 20px;
+}
 footer {
     padding: 10px 0 65px;
     position: absolute;
@@ -9,3 +12,4 @@ footer .copyright {
     margin-bottom: 0;
     text-align: center
 }
+
