--- a/pages/templates/pages/includes/page_menu.html
+++ b/pages/templates/pages/includes/page_menu.html
@@ -1,19 +1,23 @@
+{% load static %}
+<script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+<script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
+{% if request.user.is_staff %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <span>Administar</span>
-        <button>
-            <span></span>
+        <span class="navbar-brand" href="#"> <i>Administar</i></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nep" aria-controls="nep" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div>
-            <ul>
-                <li class="nav-item"></li>
+        <div class="collapse navbar-collapse" id="nep">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a href="#">Crear Página</a>
+                    <a class="nav-link" href="{% url 'pages:create' %}"><i>Crear Página</i></a>
                 </li>
-                <li>
-                    <a href="#">Listar pagina</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'pages:pages' %}"><i>Listar pagina</i></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+{% endif %}
